fix outline visible workspace

--- a/home/dot_config/waybar/style.css
+++ b/home/dot_config/waybar/style.css
@@ -12,17 +12,19 @@ window#waybar, tooltip {
 label, button {
     background: inherit;
     color: inherit;
+    font-weight: inherit;
 }
 
 #workspaces button {
     padding: 0 5px;
     background: transparent;
     color: inherit;
+    border: 1px dotted transparent;
     border-radius: 6px;
+    font-weight: normal;
 }
 
-#workspace button.visible {
-    font-weight: 900;
+#workspaces button.visible {
     border: 1px dotted #ebdbb2;
 }
 
